Added Schedule page and schedule link.

--- a/Glossary.html
+++ b/Glossary.html
@@ -24,6 +24,9 @@
       </a>
       <a class="button" href="/ProductivePlaces/presentations.html">
         Presentations
+      </a>      
+      <a class="button" href="/ProductivePlaces/schedule.html">
+        Schedule
       </a>
       <a class="button" href="/ProductivePlaces/labs.html">
         Labs
