--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <br>
   <div class="header">
     <br>
+
     <nav class="topnav">
       <a class="button" href="/ProductivePlaces/index.html">
         Home
@@ -24,6 +25,9 @@
       </a>
       <a class="button" href="/ProductivePlaces/presentations.html">
         Presentations
+      </a>      
+      <a class="button" href="/ProductivePlaces/schedule.html">
+        Schedule
       </a>
       <a class="button" href="/ProductivePlaces/labs.html">
         Labs
