--- a/presentations.html
+++ b/presentations.html
@@ -26,6 +26,9 @@
       </a>
       <a class="button" href="/ProductivePlaces/presentations.html">
         Presentations
+      </a>      
+      <a class="button" href="/ProductivePlaces/schedule.html">
+        Schedule
       </a>
       <a class="button" href="/ProductivePlaces/labs.html">
         Labs
@@ -42,6 +45,7 @@
     </nav>
     <br>
   </div>
+  
   <div class="main">
     <div class="body-card">
       <h2>Feasibility [Final]</h2>
