--- a/labs.html
+++ b/labs.html
@@ -16,32 +16,35 @@
     <br>
     <div class="header">
         <br>
-
+    
         <nav class="topnav">
-            <a class="button" href="/ProductivePlaces/index.html">
-                Home
-            </a>
-            <a class="button" href="/ProductivePlaces/Problem.html">
-                Problem
-            </a>
-            <a class="button" href="/ProductivePlaces/presentations.html">
-                Presentations
-            </a>
-            <a class="button" href="/ProductivePlaces/labs.html">
-                Labs
-            </a>
-            <a class="button" href="/ProductivePlaces/Glossary.html">
-                Glossary
-            </a>
-            <a class="button" href="/ProductivePlaces/references.html">
-                References
-            </a>
-            <a class="button" href="/ProductivePlaces/teambio.html">
-                Team Gold
-            </a>
+          <a class="button" href="/ProductivePlaces/index.html">
+            Home
+          </a>
+          <a class="button" href="/ProductivePlaces/Problem.html">
+            Problem
+          </a>
+          <a class="button" href="/ProductivePlaces/presentations.html">
+            Presentations
+          </a>      
+          <a class="button" href="/ProductivePlaces/schedule.html">
+            Schedule
+          </a>
+          <a class="button" href="/ProductivePlaces/labs.html">
+            Labs
+          </a>
+          <a class="button" href="/ProductivePlaces/Glossary.html">
+            Glossary
+          </a>
+          <a class="button" href="/ProductivePlaces/references.html">
+            References
+          </a>
+          <a class="button" href="/ProductivePlaces/teambio.html">
+            Team Gold
+          </a>
         </nav>
         <br>
-    </div>
+      </div>
 
 
     <div class="main">
