--- a/Problem.html
+++ b/Problem.html
@@ -53,10 +53,8 @@
         Many students struggle to concentrate on studying and completing schoolwork at home for various reasons,
         resulting in a need for finding alternate locations to be productive. Students seeking study locations that
         remain open during the evenings will gain the most advantages, as many places close early, and don’t
-        accommodate
-        for late hours. Our team proposes a web application that returns to the user a list of places open for
-        studying,
-        collaborating, to address the problem.
+        accommodate for late hours. Our team proposes a web application that returns to the user a list of places open for
+        studying,collaborating, to address the problem.
 
       </p>
     </div>
