--- a/schedule.html
+++ b/schedule.html
@@ -26,7 +26,7 @@
       </a>
       <a class="button" href="/ProductivePlaces/presentations.html">
         Presentations
-      </a>      
+      </a>
       <a class="button" href="/ProductivePlaces/schedule.html">
         Schedule
       </a>
@@ -50,80 +50,105 @@
 
   <div class="main">
     <div class="body-card">
-	
-	   <h2><u><strong> The Problem </strong></u></br></h2>
-       <p>
-	   Many students struggle to concentrate on studying and completing schoolwork at home for various reasons, resulting in a need for finding alternate locations to be productive. Students seeking study locations that remain open during the evenings will gain the most advantages, as many places close early, and don’t accommodate for late hours. 
+
+      <h2><u><strong> The Problem </strong></u></br></h2>
+      <p>
+        Many students struggle to concentrate on studying and completing schoolwork at home for various reasons,
+        resulting in a need for finding alternate locations to be productive. Students seeking study locations that
+        remain open during the evenings will gain the most advantages, as many places close early, and don’t accommodate
+        for late hours.
+
         </br></br>
-         <strong>Customers and end users:</strong>
+
+        <strong>Customers and end users</strong>
         </br>
-         Students
+        Students
         </br>
-         Remote workers
+        Remote workers
         </br></br>
- 
-        <strong><u>Proposed solution:</u> Productive Places</strong></br>
+
+        <strong>Proposed solution</strong></br>
         </br>
-         <strong>Productive Places</strong> will be a web application that returns to the user a list of places open for studying, collaborating, to address the problem.
+        <strong>Productive Places</strong> will be a web application that returns to the user a list of places open for
+        studying, collaborating, to address the problem.
         </br>
+      </p>
 
-        </p>
+      <h2><u>Prototype Defense:</u></h2>
 
-        <h2><u>Prototype Defense:</u></h2></br>
-
-        <p>
+      <p>
         <strong>Justify current development tools:</strong></br>
 
-        <strong>VS Code:</strong> This IDE allows easy integration with pushing to GitHub, along with an integrated terminal for installing dependencies.</br>
-        
+        <strong>VS Code:</strong> This IDE allows easy integration with pushing to GitHub, along with an integrated
+        terminal for installing dependencies.</br>
+
         <strong>Version Control:</strong>
-		We are using <strong>GitHub</strong> for version control as it is the industry standard for codebase collaboration.</br>
-        
+        We are using <strong>GitHub</strong> for version control as it is the industry standard for codebase
+        collaboration.</br>
+
         <strong>Continuous Integration and Deployment: </strong>
-		Our version control software has an integrated continuous integration feature called GitHub Actions. We decided on his tool due to it being an easy extension to our existing version control workflow.</br>
+        Our version control software has an integrated continuous integration feature called GitHub Actions. We decided
+        on his tool due to it being an easy extension to our existing version control workflow.
+
+        </br></br>
 
         <strong>Justify current design:</strong></br>
 
-        The design focuses on simplicity, accessibility, and user-friendliness. Features like advanced filtering address users' specific needs while the community reviews section builds trust and enhances decision-making. Additionally, a responsive layout ensures usability across various devices. </br>
-		
-        <strong>Justify architectural decisions:</strong></br>
+        The design focuses on simplicity, accessibility, and user-friendliness. Features like advanced filtering address
+        users' specific needs while the community reviews section builds trust and enhances decision-making.
+        Additionally, a responsive layout ensures usability across various devices.
 
-        The group has only discussed the schema for the database in regards to architectural decisions. The attributes for each table is separated in a way that allows for data to be stored and retrieve in an efficient manner while still retaining the necessary information to display to the end user.
+        </br></br>
+
+        <strong>Justify architectural decisions:</strong>
 
         </br>
-		
+
+        The group has only discussed the schema for the database in regards to architectural decisions. The attributes
+        for each table is separated in a way that allows for data to be stored and retrieve in an efficient manner while
+        still retaining the necessary information to display to the end user.
+
+        </br></br>
+
         <strong>Justify selected frameworks:</strong></br>
 
         <strong>ReactJS:</strong>
-		For building a interactive UI </br>
-		
-        <strong>NodeJS: </strong>
-		This backend was selected to complement javascript throughout the stack, 
-        and to build a scalable real-time application </br>
-		
-        <strong>Express: </strong>
-		For building APIs and middleware </br>
-		
-        <strong>Vite: </strong>
-		For rapidly developing the application by using out of the box optimization of web patterns </br>
-		
-        <strong>Google Maps:</strong> 
-		Reliable API for real time numbers of crowds and opening/closing times </br>
+        For building a interactive UI </br>
 
+        <strong>NodeJS: </strong>
+        This backend was selected to complement javascript throughout the stack,
+        and to build a scalable real-time application </br>
+
+        <strong>Express: </strong>
+        For building APIs and middleware </br>
+
+        <strong>Vite: </strong>
+        For rapidly developing the application by using out of the box optimization of web patterns
         </br>
+
+        <strong>Google Maps:</strong>
+        Reliable API for real time numbers of crowds and opening/closing times.
+
+        </br></br>
+
         <strong>Justify selected language(s):</strong></br>
 
         <strong>HTML</strong> will be used for the structure of our web application for the frontend.
 
-        <strong>CSS</strong> will be used for the beautiful presentation of our frontend elements in the web application.
+        <strong>CSS</strong> will be used for the beautiful presentation of our frontend elements in the web
+        application.
 
-        <strong>MySQL</strong> will be used for the database design of our web application, which will connect with the backend. 
+        <strong>MySQL</strong> will be used for the database design of our web application, which will connect with the
+        backend.
 
-        <strong>JavaScript</strong> will be used to make the frontend website elements more interactive, such as downloading files. Additionally, JavaScript will also be used for the backend, which will connect with the frontend via a server. 
+        <strong>JavaScript</strong> will be used to make the frontend website elements more interactive, such as
+        downloading files. Additionally, JavaScript will also be used for the backend, which will connect with the
+        frontend via a server.
       </p>
     </div>
 
     <br>
+
 
     <div class="footer">
 
