--- a/labs.html
+++ b/labs.html
@@ -59,6 +59,12 @@
             </div>
         </div>
         <br>
+        <div>
+            <h2>Individual Lab Outline</h2>
+            <ul>
+                <li><a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Chanze%20-%20Lab%201%20Draft.pdf">Chanze</a></li>
+            </ul>
+        </div>
         <div class="footer">
 
             <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
