--- a/labs.html
+++ b/labs.html
@@ -59,10 +59,10 @@
             </div>
         </div>
         <br>
-        <div>
+        <div class="body-card">
             <h2>Individual Lab Outline</h2>
             <ul>
-                <li><a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Chanze%20-%20Lab%201%20Draft.pdf">Chanze</a></li>
+                <li><a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Chanze%20-%20Lab%201%20Draft.pdf" class="button">Chanze</a></li>
             </ul>
         </div>
         <div class="footer">
