--- a/labs.html
+++ b/labs.html
@@ -61,9 +61,7 @@
         <br>
         <div class="body-card">
             <h2>Individual Lab Outline</h2>
-            <ul>
-                <li><a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Chanze%20-%20Lab%201%20Draft.pdf" class="button">Chanze</a></li>
-            </ul>
+                <a href="/pdfs/Chanze%20-%20Lab%201%20Draft.pdf" class="button">Chanze</a></li>
         </div>
         <div class="footer">
 
