--- a/labs.html
+++ b/labs.html
@@ -62,6 +62,12 @@
         <div class="body-card">
             <h2>Individual Lab Outline</h2>
                 <a href="/pdfs/Chanze%20-%20Lab%201%20Draft.pdf" class="button">Chanze</a></li>
+                <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Christian%20-%20Lab%201%20Draft.pdf" class="button">Christian</a></li>
+                <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Kayla%20Tucker%20-%20Lab%201%20Update%20Section%201.pdf" class="button">Kayla</a></li>
+                <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Lab%201%20Draft%20Update%20Section%201_%20Denise.pdf" class="button">Denise</a></li>
+                <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Lab1(0)_Draft_Jake.pdf" class="button">Jake</a></li>
+                <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Michael_Evans_CS_411_Lab_1.pdf" class="button">Michael</a></li>
+                <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Yomna%20-%20Lab%201.pdf" class="button">Yomna</a></li>
         </div>
         <div class="footer">
 
