--- a/labs.html
+++ b/labs.html
@@ -61,6 +61,7 @@
         <br>
         <div class="body-card">
             <h2>Individual Lab Outline</h2>
+            <div styles="">
                 <a href="/pdfs/Chanze%20-%20Lab%201%20Draft.pdf" class="button">Chanze</a></li>
                 <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Christian%20-%20Lab%201%20Draft.pdf" class="button">Christian</a></li>
                 <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Kayla%20Tucker%20-%20Lab%201%20Update%20Section%201.pdf" class="button">Kayla</a></li>
@@ -68,7 +69,9 @@
                 <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Lab1(0)_Draft_Jake.pdf" class="button">Jake</a></li>
                 <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Michael_Evans_CS_411_Lab_1.pdf" class="button">Michael</a></li>
                 <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Yomna%20-%20Lab%201.pdf" class="button">Yomna</a></li>
+            </div>
         </div>
+        <br>
         <div class="footer">
 
             <a href="http://www.odu.edu/" class="text_Color">ODU website</a>
