--- a/labs.html
+++ b/labs.html
@@ -61,7 +61,7 @@
         <br>
         <div class="body-card">
             <h2>Individual Lab Outline</h2>
-            <div styles="">
+            <div class="lab-btns">
                 <a href="/pdfs/Chanze%20-%20Lab%201%20Draft.pdf" class="button">Chanze</a></li>
                 <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Christian%20-%20Lab%201%20Draft.pdf" class="button">Christian</a></li>
                 <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Kayla%20Tucker%20-%20Lab%201%20Update%20Section%201.pdf" class="button">Kayla</a></li>
