--- a/labs.html
+++ b/labs.html
@@ -60,7 +60,7 @@
         </div>
         <br>
         <div class="body-card">
-            <h2>Individual Lab Outline</h2>
+            <h2>Individual Lab Outlines</h2>
             <div class="lab-btns">
                 <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Chanze%20-%20Lab%201%20Draft.pdf" class="button">Chanze</a></li>
                 <a href="https://github.com/Christian-Mirt/ProductivePlaces/blob/gh_pages/pdfs/Christian%20-%20Lab%201%20Draft.pdf" class="button">Christian</a></li>
